objects/Temporary_Program_Access__c.object
<CustomObject>
    <description>Allows access to web programs on Advisory.com</description>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>Contact__r.FirstName &amp; &quot; &quot; &amp;  Contact__r.LastName</formula>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Temporary Program Access</relationshipLabel>
        <relationshipName>Temporary_Program_Access</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Program_Abbreviation__c</fullName>
        <formula>Web_Program__r.Membership_Program__r.Program_Abbreviation__c</formula>
        <label>Program Abbreviation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Acronym__c</fullName>
        <formula>Web_Program__r.Program_Acronym__c</formula>
        <label>Program Acronym</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Formal_Name__c</fullName>
        <formula>Web_Program__r.Program_Formal_Name__c</formula>
        <label>Program Formal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site Profile</label>
        <referenceTo>Site_Profile__c</referenceTo>
        <relationshipLabel>Temporary Program Access</relationshipLabel>
        <relationshipName>Temporary_Program_Access</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site_Program_ID__c</fullName>
        <formula>Web_Program__r.Adv_com_Program_ID__c</formula>
        <label>Site Program ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Web_Program_Name__c</fullName>
        <formula>Web_Program__r.Web_Program__r.Name</formula>
        <label>Web Program Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Program__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Web Program</label>
        <referenceTo>Web_Program_Access_MTM__c</referenceTo>
        <relationshipLabel>Temporary Program Access</relationshipLabel>
        <relationshipName>Temporary_Program_Access</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Temporary Program Access</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>TempProgAccess#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Temporary Program Access</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>